# festival_playlist_generator_spotify

./: .gitignore  .universal.env  LICENSE  README.md  pyproject.toml
conf/: config.py
lib/: artist_utils.py  lineup_loader.py
lib/common/: artist_utils.py  export_utils.py  lineup_loader.py  logger.py  playlist_manager.py  spotify_client.py  utils.py
lib/domain/: partysan.py  prophecy_fest.py  summerbreeze.py  wacken.py
scr/: lineup_fetcher.py  spotify_festival_playlist_generator.py
